--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ jobs:
       cache: false
       language: python
       python: '3.6'
+      before_install:
+        - chmod +x contrib/devtools/git-subtree-check.sh
       install:
         - set -o errexit; source .travis/lint_04_install.sh
       before_script:
