--- a/.travis.yml
+++ b/.travis.yml
@@ -43,20 +43,20 @@ after_script:
 jobs:
   include:
 # lint stage
-    - stage: lint
-      env:
-      sudo: false
-      cache: false
-      language: python
-      python: '3.6'
-      before_install:
-        - chmod +x contrib/devtools/git-subtree-check.sh
-      install:
-        - set -o errexit; source .travis/lint_04_install.sh
-      before_script:
-        - set -o errexit; source .travis/lint_05_before_script.sh
-      script:
-        - set -o errexit; source .travis/lint_06_script.sh
+#    - stage: lint
+#      env:
+#      sudo: false
+#      cache: false
+#      language: python
+#      python: '3.6'
+#      before_install:
+#        - chmod +x contrib/devtools/git-subtree-check.sh
+#      install:
+#        - set -o errexit; source .travis/lint_04_install.sh
+#      before_script:
+#        - set -o errexit; source .travis/lint_05_before_script.sh
+#      script:
+#        - set -o errexit; source .travis/lint_06_script.sh
 # ARM
     - stage: test
       env: >-
